# reflex-servant-backend-frontend-example

./: README.md  cabal  cabal-ghcjs  cabal.project  haskellNix.nix  reflex.nix  release.nix
backend/: backend.cabal
backend/src/: Main.hs
common/: common.cabal
common/src/: Lib.hs
frontend/: frontend.cabal
frontend/src/: Main.hs
nix/: backend-runner.nix  ci.nix  reflex.nix  sources.json
nix/external-libs/: openapi3.nix  servant-openapi3.nix  servant-reflex.nix
pkg-diffs/: ghc-pkg-list-haskellnix.txt  ghc-pkg-list-reflexplatform.txt  ghcjs-pkg-list-haskellnix.txt  ghcjs-pkg-list-reflexplatform.txt
