name:                common
version:             0.1.0.0
license:             OtherLicense
license-file:        LICENSE
author:              Jacek Galowicz
maintainer:          jacek@galowicz.de
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options:         -Wall -O2
  exposed-modules:     Lib
  build-depends:       base
                     , aeson
                     , servant
  hs-source-dirs:      src
  default-language:    Haskell2010
