name:                frontend
version:             0.1.0.0
license:             OtherLicense
license-file:        LICENSE
author:              Jacek Galowicz
maintainer:          jacek@galowicz.de
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable frontend
  main-is:             Main.hs
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , common
                     , reflex-dom
                     , servant-reflex
                     , servant
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
